changelog.txt

### 2013-12-18

+ Added Experience to Profile, Post, Edit
+ Added experience to user table
+ Added ability to edit posts